example/test_data/comprehensive-dns-test-env/secure-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-app
  namespace: secure-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secure-app
  template:
    metadata:
      labels:
        app: secure-app
    spec:
      # This pod will have DNS issues due to incorrect dnsPolicy
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - "8.8.8.8"  # This should be the cluster DNS, not external
        searches:
        - "production.local"  # Incorrect search domain
        - "company.internal"
        options:
        - name: ndots
          value: "2"  # Should be 5 for Kubernetes
      containers:
      - name: secure
        image: nginx:1.20
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: secure-service
  namespace: secure-ns
spec:
  selector:
    app: secure-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
